@@ -1,6 +1,12 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2013-06-29 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Make the CloudI Service API automatically discover its functions
+      from the exports of the module cloudi_service_api within
+      cloudi_service_api_requests
+
 2013-06-28 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Add websocket_timeout and use_client_ip_prefix
